--- a/covid19/index.html
+++ b/covid19/index.html
@@ -189,6 +189,23 @@ canvas.on('touchmove', draw);
 canvas.on('touchstart', setPosition);
 canvas.on('touchend', setPosition);
 
+// Prevent scrolling when touching the canvas
+document.body.addEventListener("touchstart", function (e) {
+  if (e.target == canvas) {
+    e.preventDefault();
+  }
+}, false);
+document.body.addEventListener("touchend", function (e) {
+  if (e.target == canvas) {
+    e.preventDefault();
+  }
+}, false);
+document.body.addEventListener("touchmove", function (e) {
+  if (e.target == canvas) {
+    e.preventDefault();
+  }
+}, false);
+
 // form save management
 function saveSettings() {
         u('.dyntext').each(function(node, i) {
